--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "tjvr",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "difflib": "^0.2.4",
     "glob": "^7.1.1",
     "json-diff": "^0.3.1",
     "node-zip": "^1.1.1"
