--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "scratch-diff",
-  "version": "0.1",
+  "version": "0.1.0",
   "description": "A sensible diff for Scratch sb2 files",
-  "main": "diff.js",
+  "main": "index.js",
   "repository": {
     "url": "https://github.com/tjvr/scratch-diff",
     "type": "git"
